5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1585_2895.log
== TEST (2019-03-26 10:24:16) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quantidade = float(input("quantidade:"))
preço total = (jogo * quantidade + frete)
print(total)
-- ERROR:
File "XXXX", line 4
    preço total = (jogo * quantidade + frete)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:54) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quantidade = float(input("quantidade:"))
preço total = int(jogo * quantidade + frete)
print(total)
-- ERROR:
File "XXXX", line 4
    preço total = int(jogo * quantidade + frete)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:37) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
preço total = int(jogo * quant + frete)
print(total)
-- ERROR:
File "XXXX", line 4
    preço total = int(jogo * quant + frete)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:15) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
preço total = float(jogo * quant + frete)
print(total)
-- ERROR:
File "XXXX", line 4
    preço total = float(jogo * quant + frete)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:31) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
total = float(jogo * quant + frete)
print(total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:26:55) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
total = float(jogo * quant + frete)
print(total)
-- EXECUTION TIME:
0.177724
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:27:00) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
total = float(jogo * quant + frete)
print(total)
-- EXECUTION TIME:
0.156298
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:27:16) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
total = float(jogo * quant + frete)
print(int(total))
-- EXECUTION TIME:
0.153812
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
valor do jogo:valor do frete:quantidade:1017
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
valor do jogo:valor do frete:quantidade:79941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:21) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quant = float(input("quantidade:"))
total = float(jogo * quant + frete)
print(int(total))
-- OUTPUT:
981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:30) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quantidade = float(input("quantidade:"))
total = float(jogo * quantidade + frete)
print(int(total))
-- EXECUTION TIME:
0.110411
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:39) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quantidade = float(input("quantidade:"))
total = float(jogo * quantidade + frete)
print(int(total))
-- OUTPUT:
981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:54) 
-- CODE:
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))
quantidade = float(input("quantidade:"))
total = float(jogo * quantidade + frete)
print(int(total))
-- EXECUTION TIME:
0.14653
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:23) 
-- CODE:
quantidade = int(input("quantidade:"))
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))


total = (jogo * quantidade) + frete

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:32:42) 
-- CODE:
quantidade = int(input("quantidade:"))
jogo = float(input("valor do jogo:"))
frete = float(input("valor do frete:"))


total = (jogo * quantidade) + frete

print(total)
-- EXECUTION TIME:
0.21456
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
